--- a/tics 2/Vision.html
+++ b/tics 2/Vision.html
@@ -14,13 +14,14 @@
   </header>
   
 <nav>
-  <a href="index.html">Inicio</a>
+   <a href="index.html">Inicio</a>
     <a href="Quienes somos.html">Quienes Somos</a>
-    <a href="Mision.html">Mision</a>
-    <a href="Vision.html">Vision</a>
+    <a href="Mision.html">Misión</a>
+    <a href="Vision.html">Visión</a>
     <a href="Productos.html">Productos</a>
-    <a href="Contactanos.html">Contactanos</a>
+    <a href="Contactanos.html">Contáctanos</a>
     <a href="Galeria.html">Galería</a>
+    <a href="Carrito.html">Carrito de Compras</a>
   </nav>
 
   <section class="contenido">
