--- a/tics 2/Contactanos.html
+++ b/tics 2/Contactanos.html
@@ -9,18 +9,19 @@
 <body>
 
   <header>
-    <img src="img/logo.png" alt="Burger Diner Logo" class="logo" />
+    <img src="burge.jpg" alt="Burger Diner Logo" class="logo" />
     <h1>Burger Diner</h1>
   </header>
 
   <nav>
-    <a href="index.html">Inicio</a>
+  <a href="index.html">Inicio</a>
     <a href="Quienes somos.html">Quienes Somos</a>
     <a href="Mision.html">Misión</a>
     <a href="Vision.html">Visión</a>
     <a href="Productos.html">Productos</a>
     <a href="Contactanos.html">Contáctanos</a>
     <a href="Galeria.html">Galería</a>
+    <a href="Carrito.html">Carrito de Compras</a>
   </nav>
 
   <section class="contacto">
