--- a/tics 2/Productos.html
+++ b/tics 2/Productos.html
@@ -8,15 +8,16 @@
 </head>
 <body>
 
-  <!-- Menú de navegación -->
+  
   <nav>
     <a href="index.html">Inicio</a>
     <a href="Quienes somos.html">Quienes Somos</a>
-    <a href="Mision.html">Mision</a>
-    <a href="Vision.html">Vision</a>
+    <a href="Mision.html">Misión</a>
+    <a href="Vision.html">Visión</a>
     <a href="Productos.html">Productos</a>
-    <a href="Contactanos.html">Contactanos</a>
+    <a href="Contactanos.html">Contáctanos</a>
     <a href="Galeria.html">Galería</a>
+    <a href="Carrito.html">Carrito de Compras</a>
   </nav>
 
   <!-- Sección de productos -->
@@ -28,24 +29,24 @@
       <h3>Desayuno</h3>
       <div class="contenedor-productos">
         <div class="producto">
-          <img src="img/cafe.jpg" alt="Café Premium">
-          <h4>Café Premium</h4>
-          <p>Despierta tus mañanas con sabor intenso.</p>
+          <img src="Americano.jpg" alt="Americano">
+          <h4>Americano</h4>
+          <p>Dos huevos revueltos o estrellados con tocino, jamon y chorizo argentino.</p>
         </div>
         <div class="producto">
-          <img src="img/panques.jpg" alt="Panqueques Caseros">
-          <h4>Panqueques Caseros</h4>
-          <p>Suaves y deliciosos, listos para disfrutar.</p>
+          <img src="Huevos.jpg" alt="Huevos">
+          <h4>Huevos Divorciados</h4>
+          <p>Dos huevos estrellado.</p>
         </div>
         <div class="producto">
-          <img src="img/yogurt.jpg" alt="Yogurt Natural">
-          <h4>Yogurt Natural</h4>
-          <p>Fresco, nutritivo y sin aditivos.</p>
+          <img src="Yogurt.jpg" alt="Yogurt">
+          <h4> Copa de Yogurt</h4>
+          <p>Con granola y fruta.</p>
         </div>
         <div class="producto">
-          <img src="img/jugo-naranja.jpg" alt="Jugo de Naranja">
-          <h4>Jugo de Naranja</h4>
-          <p>100% natural, exprimido al instante.</p>
+          <img src="Finquero.jpg" alt="Finquero">
+          <h4>Finquero </h4>
+          <p>Con carne de Res.</p>
         </div>
       </div>
     </div>
@@ -55,24 +56,24 @@
       <h3>Almuerzo</h3>
       <div class="contenedor-productos">
         <div class="producto">
-          <img src="img/pollo-asado.jpg" alt="Pollo Asado">
-          <h4>Pollo Asado</h4>
-          <p>Jugoso y bien condimentado, estilo casero.</p>
+          <img src="Parrillada.jpg" alt="Parrillada">
+          <h4>Parrillada Personal </h4>
+          <p>Carne de Res, Filete de Pollo, Chorizo Argentina y Guarniciones.</p>
         </div>
         <div class="producto">
-          <img src="img/arroz-verduras.jpg" alt="Arroz con Verduras">
-          <h4>Arroz con Verduras</h4>
-          <p>Sano, sabroso y lleno de color.</p>
+          <img src="Ensalada.jpg" alt="Ensalada">
+          <h4>Ensalada Mediterranea</h4>
+          <p>Lechuga, tomate, cebolla, chile pimiento, aguacate, pepino, rabani zanahoria, elotitos, queso feta, tocino, palmito, queso amarrill y Pollo a la Parrilla o Empanizado.</p>
         </div>
         <div class="producto">
-          <img src="img/ensalada.jpg" alt="Ensalada Fresca">
-          <h4>Ensalada Fresca</h4>
-          <p>Con ingredientes seleccionados y aderezo natural.</p>
+          <img src="Tortilla.jpg" alt="Tortilla">
+          <h4>Tortilla de Harina</h4>
+          <p>Pollo, Res o Mixta.</p>
         </div>
         <div class="producto">
-          <img src="img/jugo-mora.jpg" alt="Jugo de Mora">
-          <h4>Jugo de Mora</h4>
-          <p>Refrescante, antioxidante y delicioso.</p>
+          <img src="Alfedro.jpg" alt="Alfedro">
+          <h4>Pasta Alfedro</h4>
+          <p>Pasta Alfedro con Pollo.</p>
         </div>
       </div>
     </div>
@@ -82,24 +83,24 @@
       <h3>Cena</h3>
       <div class="contenedor-productos">
         <div class="producto">
-          <img src="img/sopa.jpg" alt="Sopa de Verduras">
-          <h4>Sopa de Verduras</h4>
-          <p>Ligera, reconfortante y nutritiva.</p>
+          <img src="Ranchero.jpg" alt="Ranchero">
+          <h4>Ranchero</h4>
+          <p>Con filete de pollo.</p>
         </div>
         <div class="producto">
-          <img src="img/sandwich.jpg" alt="Sándwich Integral">
-          <h4>Sándwich Integral</h4>
-          <p>Con pan artesanal y vegetales frescos.</p>
+          <img src="Quesadillas.jpg" alt="Quesadillas">
+          <h4>Quesadillas Mexicanas</h4>
+          <p>Pollo, Res o Mixtas.</p>
         </div>
         <div class="producto">
-          <img src="img/te.jpg" alt="Té Relajante">
-          <h4>Té Relajante</h4>
-          <p>Ideal para terminar el día con calma.</p>
+          <img src="Pizza.jpg" alt="Pizza">
+          <h4>Pizza Burger</h4>
+          <p> Queso Mozzarella, Peperoni y Salsa se Pizza.</p>
         </div>
         <div class="producto">
-          <img src="img/fruta.jpg" alt="Fruta de Temporada">
-          <h4>Fruta de Temporada</h4>
-          <p>Dulce, jugosa y lista para consumir.</p>
+          <img src="Omelette.jpg" alt="Omelette">
+          <h4>Omelette con Brocoli</h4>
+          <p>Omelette esponjoso relleno de brócoli fresco y queso derretido..</p>
         </div>
       </div>
     </div>
