--- a/tics 2/Mision.html
+++ b/tics 2/Mision.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Misión | Burger Diner</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Misión - Burger Diner</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
     <img src="burge.jpg" alt="Logo de Burger Diner" class="logo">
-    <h1>Nuestra Misión</h1>
+    <h1>Burger Diner</h1>
   </header>
 
   <nav>
     <a href="index.html">Inicio</a>
     <a href="Quienes somos.html">Quienes Somos</a>
-    <a href="Mision.html">Mision</a>
-    <a href="Vision.html">Vision</a>
+    <a href="Mision.html">Misión</a>
+    <a href="Vision.html">Visión</a>
     <a href="Productos.html">Productos</a>
-    <a href="Contactanos.html">Contactanos</a>
+    <a href="Contactanos.html">Contáctanos</a>
     <a href="Galeria.html">Galería</a>
+    <a href="Carrito.html">Carrito de Compras</a>
   </nav>
 
-  <section class="mision">
+ 
+  <section class="contenido">
     <div class="caja-texto">
+    <div class="texto">
     <h2>Nuestra Misión</h2>
-    <p>
-      En <span class="resaltado">Burger Diner</span>, nuestra misión es brindar a cada cliente una experiencia gastronómica inolvidable, combinando el sabor auténtico de nuestras hamburguesas y pizzas con un servicio cálido y familiar. Nos esforzamos cada día por ofrecer alimentos preparados con ingredientes frescos y de calidad, en un ambiente acogedor que celebra nuestras raíces locales y el espíritu de comunidad.
-    </p>
+      <p>
+        En <span class="resaltado">Burger Diner</span>, nuestra misión es ofrecer experiencias gastronómicas únicas y deliciosas, combinando ingredientes frescos y de calidad con un servicio cálido y auténtico. Nos esforzamos por brindar el mejor sabor americano con un toque local, asegurando la satisfacción de nuestros clientes en cada visita.
+      </p>
+    </div>
   </section>
 
   <footer>
-    &copy; 2025 Burger Diner. Todos los derechos reservados.
+    <p>&copy; 2025 Burger Diner. Todos los derechos reservados.</p>
   </footer>
 
 </body>
