--- a/tics 2/Quienes somos.html
+++ b/tics 2/Quienes somos.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -10,17 +11,18 @@
 
   <header>
     <img src="burge.jpg" alt="Logo de Burger Diner" class="logo">
-    <h1>Quines somos</h1>
+    <h1>Quienes somos</h1>
   </header>
 
   <nav>
-    <a href="index.html">Inicio</a>
+  <a href="index.html">Inicio</a>
     <a href="Quienes somos.html">Quienes Somos</a>
-    <a href="Mision.html">Mision</a>
-    <a href="Vision.html">Vision</a>
+    <a href="Mision.html">Misión</a>
+    <a href="Vision.html">Visión</a>
     <a href="Productos.html">Productos</a>
-    <a href="Contactanos.html">Contactanos</a>
+    <a href="Contactanos.html">Contáctanos</a>
     <a href="Galeria.html">Galería</a>
+    <a href="Carrito.html">Carrito de Compras</a>
   </nav>
 
   <section class="contenido">
